@@ -27,6 +27,7 @@ breakpoint and restarting the server. This speeds up the process.
     ... [logger]
     ... blueprint = collective.transmogrifier.sections.logger
     ... name = logger
+    ... level = INFO
     ... """
     >>> registerConfig(u'collective.transmogrifier.sections.tests.breaker',
     ...                breaker)
@@ -37,14 +38,14 @@ giving some input (just a continue cammand).
     >>> oldstdin = make_stdin('c\n')
     >>> transmogrifier(u'collective.transmogrifier.sections.tests.breaker')
     > .../collective.transmogrifier/src/collective/transmogrifier/sections/logger.py(...)__iter__()
-    -> if self.condition(item):
+    -> ...
     (Pdb) c
     >>> print handler
-    logger DEBUG
+    logger INFO
         {'id': 'item-00'}
-    logger DEBUG
+    logger INFO
         {'id': 'item-01'}
-    logger DEBUG
+    logger INFO
         {'id': 'item-02'}
 
 
