@@ -47,19 +47,20 @@ version.
     ... [logger]
     ... blueprint = collective.transmogrifier.sections.logger
     ... name = logger
+    ... level = INFO
     ... """
     >>> registerConfig(u'collective.transmogrifier.sections.tests.inserter',
     ...                inserter)
     >>> transmogrifier(u'collective.transmogrifier.sections.tests.inserter')
     >>> print handler
-    logger DEBUG
+    logger INFO
         {'foo': 'bar (inserted into "item-00" by the "simple-insertion" section)',
         'id': 'foo-item-00'}
-    logger DEBUG
+    logger INFO
         {'foo': 'bar (inserted into "item-01" by the "simple-insertion" section)',
         'foo-01': 15,
         'id': 'foo-item-01'}
-    logger DEBUG
+    logger INFO
         {'foo': 'bar (inserted into "item-02" by the "simple-insertion" section)',
         'foo-02': 30,
         'id': 'foo-item-02'}
