@@ -67,22 +67,23 @@ Start with an HTML file containing a heirarchical navbar.
     ... [logger]
     ... blueprint = collective.transmogrifier.sections.logger
     ... name = logger
+    ... level = INFO
     ... """.format(html_file)
     >>> registerConfig(u'collective.transmogrifier.sections.tests.xmlwalker',
     ...                infologger)
     >>> transmogrifier(u'collective.transmogrifier.sections.tests.xmlwalker')
     >>> print handler
-    logger DEBUG
+    logger INFO
         {'_defaultpage': 1, '_type': 'Folder'}
-    logger DEBUG
+    logger INFO
         {'_is_defaultpage': True, '_parent': {'_defaultpage': 1, '_type': 'Folder'}}
-    logger DEBUG
+    logger INFO
         {'_defaultpage': 1,
        '_parent': {'_defaultpage': 1, '_type': 'Folder'},
        '_path': '#',
        '_type': 'Folder',
        'title': 'Foo Tab'}
-    logger DEBUG
+    logger INFO
         {'_is_defaultpage': True,
        '_parent': {'_defaultpage': 1,
                    '_path': '#',
@@ -90,34 +91,34 @@ Start with an HTML file containing a heirarchical navbar.
                    'title': 'Foo Tab'},
        '_path': '#',
        'title': 'Foo Tab'}
-    logger DEBUG
+    logger INFO
         {'_parent': {'_defaultpage': 1,
                    '_path': '#',
                    '_type': 'Folder',
                    'title': 'Foo Tab'},
        '_path': '../foo-tab/index.html',
        'title': 'Foo Tab Default Page'}
-    logger DEBUG
+    logger INFO
         {'_parent': {'_defaultpage': 1,
                    '_path': '#',
                    '_type': 'Folder',
                    'title': 'Foo Tab'},
        '_path': '../foo-tab/bar-page.html',
        'title': 'Bar Page'}
-    logger DEBUG
+    logger INFO
         {'_parent': {'_defaultpage': 1,
                    '_path': '#',
                    '_type': 'Folder',
                    'title': 'Foo Tab'},
        '_path': '../foo-tab/qux-page.html',
        'title': 'Qux Page'}
-    logger DEBUG
+    logger INFO
         {'_defaultpage': 1,
        '_parent': {'_defaultpage': 1, '_type': 'Folder'},
        '_path': '#',
        '_type': 'Folder',
        'title': 'Company'}
-    logger DEBUG
+    logger INFO
         {'_is_defaultpage': True,
        '_parent': {'_defaultpage': 1,
                    '_path': '#',
@@ -125,7 +126,7 @@ Start with an HTML file containing a heirarchical navbar.
                    'title': 'Company'},
        '_path': '#',
        'title': 'Company'}
-    logger DEBUG
+    logger INFO
         {'_defaultpage': 1,
        '_parent': {'_defaultpage': 1,
                    '_path': '#',
@@ -134,7 +135,7 @@ Start with an HTML file containing a heirarchical navbar.
        '_path': '../company/news.html',
        '_type': 'Folder',
        'title': 'News'}
-    logger DEBUG
+    logger INFO
         {'_is_defaultpage': True,
        '_parent': {'_defaultpage': 1,
                    '_path': '../company/news.html',
@@ -142,35 +143,35 @@ Start with an HTML file containing a heirarchical navbar.
                    'title': 'News'},
        '_path': '../company/news.html',
        'title': 'News'}
-    logger DEBUG
+    logger INFO
         {'_parent': {'_defaultpage': 1,
                    '_path': '../company/news.html',
                    '_type': 'Folder',
                    'title': 'News'},
        '_path': '../company/news.html',
        'title': 'News'}
-    logger DEBUG
+    logger INFO
         {'_parent': {'_defaultpage': 1,
                    '_path': '../company/news.html',
                    '_type': 'Folder',
                    'title': 'News'},
        '_path': '../company/press_releases.html',
        'title': 'Press Releases'}
-    logger DEBUG
+    logger INFO
         {'_parent': {'_defaultpage': 1,
                    '_path': '#',
                    '_type': 'Folder',
                    'title': 'Company'},
        '_path': '../company/events.html',
        'title': 'Events'}
-    logger DEBUG
+    logger INFO
         {'_parent': {'_defaultpage': 1,
                    '_path': '#',
                    '_type': 'Folder',
                    'title': 'Company'},
        '_path': '../contact_us/contact.html',
        'title': 'Contact Us'}
-    logger DEBUG
+    logger INFO
         {'_defaultpage': 1,
        '_parent': {'_defaultpage': 1,
                    '_path': '#',
@@ -179,7 +180,7 @@ Start with an HTML file containing a heirarchical navbar.
        '_path': '../company/index.html',
        '_type': 'Folder',
        'title': 'About Company'}
-    logger DEBUG
+    logger INFO
         {'_is_defaultpage': True,
        '_parent': {'_defaultpage': 1,
                    '_path': '../company/index.html',
@@ -187,28 +188,28 @@ Start with an HTML file containing a heirarchical navbar.
                    'title': 'About Company'},
        '_path': '../company/index.html',
        'title': 'About Company'}
-    logger DEBUG
+    logger INFO
         {'_parent': {'_defaultpage': 1,
                    '_path': '../company/index.html',
                    '_type': 'Folder',
                    'title': 'About Company'},
        '_path': '../company/management.html',
        'title': 'Management'}
-    logger DEBUG
+    logger INFO
         {'_parent': {'_defaultpage': 1,
                    '_path': '../company/index.html',
                    '_type': 'Folder',
                    'title': 'About Company'},
        '_path': '../company/investors.html',
        'title': 'Investors'}
-    logger DEBUG
+    logger INFO
         {'_parent': {'_defaultpage': 1,
                    '_path': '../company/index.html',
                    '_type': 'Folder',
                    'title': 'About Company'},
        '_path': '../company/careers.html',
        'title': 'Careers'}
-    logger DEBUG
+    logger INFO
         {'_parent': {'_defaultpage': 1,
                    '_path': '../company/index.html',
                    '_type': 'Folder',
